update asset transfer pdf and views

--- a/AssetManagementSystem.PL/Views/Asset/Index.cshtml
+++ b/AssetManagementSystem.PL/Views/Asset/Index.cshtml
@@ -779,12 +779,12 @@ AST004⟶AST005"></textarea>
                                         <li><a href="/Asset/Edit/${row.assetTag}" class="dropdown-item">
                                             <i class="fas fa-edit text-warning me-2"></i> تعديل
                                         </a></li>
-                                        <li><a href="/Asset/Details/${row.assetTag}" class="dropdown-item">
-                                            <i class="fas fa-info-circle text-info me-2"></i> التفاصيل
+                                        <li><a href="/Asset/Delete/${row.assetTag}" class="dropdown-item">
+                                            <i class="fas fa-trash-alt text-danger me-2"></i> حذف
                                         </a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a href="#" class="dropdown-item dispose-btn" data-asset-tag="${row.assetTag}">
-                                            <i class="fas fa-trash-alt text-danger me-2"></i> تكهين
+                                            <i class="fas fa-info-circle text-info me-2"></i> تكهين
                                         </a></li>
                                     </ul>
                                 </div>`;
