--- a/AssetManagementSystem.PL/Views/Disbursement/Delete.cshtml
+++ b/AssetManagementSystem.PL/Views/Disbursement/Delete.cshtml
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <dl class="row">
                         <dt class="col-sm-4">عدد المواد:</dt>
-                        <dd class="col-sm-8">@Model.Items?.Count() ?? 0</dd>
+                        <dd class="col-sm-8">@(Model.Items?.Count() ?? 0)</dd>
 
                         <dt class="col-sm-4">مقدم الطلب:</dt>
                         <dd class="col-sm-8">@Model.Requester</dd>
